--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Showroom AI Chatbot</title>
+    <title>Human Motors Welkom</title>
     <style>
         body { font-family: Arial, sans-serif; text-align: center; margin: 50px; }
         #chatbox { width: 400px; height: 300px; overflow-y: auto; border: 1px solid #ccc; padding: 10px; margin: auto; }
