Updated header to Human Motors Welkom

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </style>
 </head>
 <body>
-    <h1>Showroom AI Chatbot</h1>
+    <h1>Human Motors Welkom Showroom</h1>
     <div id="chatbox"></div>
     <input type="text" id="userInput" placeholder="Ask about a vehicle...">
     <button onclick="sendMessage()">Send</button>
