--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <h2>Contact Sales</h2>
     <input type="text" id="name" placeholder="Your Name">
     <input type="email" id="email" placeholder="Your Email">
-    <textarea id="message" placeholder="Your Inquiry"></textarea>
+    <textarea id="message" placeholder="Your Inquiry" rows="4" cols="40"></textarea>
     <button onclick="sendEmail()">Send Inquiry</button>
     
     <script>
