--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     </style>
 </head>
 <body>
+        <!-- Banner Image -->
+    <img src="assets/ford.jpeg" alt="Showroom Banner" id="banner">
     <h1>Human Motors Welkom Showroom</h1>
     <div id="chatbox"></div>
     <input type="text" id="userInput" placeholder="Ask about a vehicle...">
