--- a/index.html
+++ b/index.html
@@ -5,7 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Human Motors Welkom</title>
     <style>
-        body { font-family: Arial, sans-serif; text-align: center; margin: 0; padding: 0; }
+        body { 
+            font-family: Arial, sans-serif; 
+            text-align: center; 
+            margin: 0; 
+            padding: 0; 
+            background: url("assets/ford-logo.png") no-repeat center center fixed;
+            background-size: cover;
+        }
         
         /* Full Screen Layout */
         #avatar-container {
@@ -25,12 +32,13 @@
         #robot-avatar {
             width: 100%;
             height: 100%;
-            background-color: #e0e0e0;
+            background-color: rgba(255, 255, 255, 0.2);
             border-radius: 10px;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            backdrop-filter: blur(10px);
         }
 
         /* Mouth (for interaction animation) */
@@ -57,28 +65,50 @@
 
         #name {
             font-size: 16px;
-            color: #333;
+            color: white;
+            font-weight: bold;
         }
 
         /* Chat Box for Vehicle Interaction */
         #chatbox {
             position: fixed;
-            bottom: 20px;
+            bottom: 60px; /* Leaves space for the input field */
             left: 50%;
             transform: translateX(-50%);
-            width: 80%;
+            width: 90%;
+            height: 50vh;
             padding: 10px;
-            background-color: rgba(0, 0, 0, 0.7);
+            background: rgba(0, 0, 0, 0.7);
             color: white;
-            border-radius: 5px;
-            text-align: center;
-            display: none;
+            border-radius: 10px;
+            text-align: left;
+            overflow-y: auto;
+            display: block;
         }
 
-        /* Hide Input Fields and Contact Form */
-        input, textarea, button {
-            display: none;
+        /* Input Field at Bottom */
+        #input-container {
+            position: fixed;
+            bottom: 10px;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 90%;
+            display: flex;
+            background: white;
+            border-radius: 25px;
+            padding: 10px;
+            align-items: center;
         }
+
+        #user-input {
+            flex: 1;
+            border: none;
+            padding: 10px;
+            outline: none;
+            font-size: 16px;
+            border-radius: 25px;
+        }
+
     </style>
 </head>
 <body>
@@ -97,6 +127,11 @@
     <!-- Chat Box for interaction -->
     <div id="chatbox"></div>
 
+    <!-- Input Field at Bottom -->
+    <div id="input-container">
+        <input type="text" id="user-input" placeholder="Type a message..." onkeypress="handleKeyPress(event)">
+    </div>
+
     <script>
         window.onload = async function() {
             let chatbox = document.getElementById("chatbox");
@@ -113,7 +148,7 @@
                 let botReply = data.reply;
 
                 chatbox.innerHTML += `<p><strong>Mary:</strong> ${botReply}</p>`;
-                chatbox.style.display = 'block';  // Show the chat box
+                chatbox.scrollTop = chatbox.scrollHeight; // Auto-scroll
             } catch (error) {
                 chatbox.innerHTML += `<p style="color:red;"><strong>Mary:</strong> Error contacting server. Please try again.</p>`;
                 console.error("Fetch error:", error);
@@ -122,11 +157,7 @@
 
         async function interactWithAvatar() {
             let chatbox = document.getElementById("chatbox");
-            const mouth = document.getElementById("mouth");
 
-            // Toggle mouth opening animation
-            mouth.classList.toggle('open');
-            
             // Send message to backend when avatar is clicked
             try {
                 let response = await fetch("https://chatgpt-backend-3o3a.onrender.com/message", {  
@@ -139,10 +170,49 @@
                 let botReply = data.reply;
 
                 chatbox.innerHTML += `<p><strong>Mary:</strong> ${botReply}</p>`;
-                chatbox.style.display = 'block';  // Show chat box
+                chatbox.scrollTop = chatbox.scrollHeight; // Auto-scroll
             } catch (error) {
                 chatbox.innerHTML += `<p style="color:red;"><strong>Mary:</strong> Error contacting server. Please try again.</p>`;
                 console.error("Fetch error:", error);
+            }
+        }
+
+        async function sendMessage() {
+            let inputField = document.getElementById("user-input");
+            let chatbox = document.getElementById("chatbox");
+
+            let userMessage = inputField.value.trim();
+            if (userMessage === "") return;
+
+            // Display user message
+            chatbox.innerHTML += `<p><strong>You:</strong> ${userMessage}</p>`;
+            chatbox.scrollTop = chatbox.scrollHeight; // Auto-scroll
+
+            // Send message to backend
+            try {
+                let response = await fetch("https://chatgpt-backend-3o3a.onrender.com/message", {  
+                    method: "POST",
+                    headers: { "Content-Type": "application/json" },
+                    body: JSON.stringify({ message: userMessage })
+                });
+
+                let data = await response.json();
+                let botReply = data.reply;
+
+                chatbox.innerHTML += `<p><strong>Mary:</strong> ${botReply}</p>`;
+                chatbox.scrollTop = chatbox.scrollHeight; // Auto-scroll
+            } catch (error) {
+                chatbox.innerHTML += `<p style="color:red;"><strong>Mary:</strong> Error contacting server. Please try again.</p>`;
+                console.error("Fetch error:", error);
+            }
+
+            // Clear input field
+            inputField.value = "";
+        }
+
+        function handleKeyPress(event) {
+            if (event.key === "Enter") {
+                sendMessage();
             }
         }
     </script>
