--- a/index.html
+++ b/index.html
@@ -41,10 +41,30 @@
             backdrop-filter: blur(10px);
         }
 
+      
+
+        /* Chest Area (for vehicle name/branding) */
+        #chest {
+            position: absolute;
+            top: 20px;
+            text-align: center;
+        }
+
+        #logo {
+            width: 60px;
+            margin-bottom: 10px;
+        }
+
+        #name {
+            font-size: 16px;
+            color: white;
+            font-weight: bold;
+        }
+
         /* Chat Box for Vehicle Interaction */
         #chatbox {
             position: fixed;
-            bottom: 60px;
+            bottom: 60px; /* Leaves space for the input field */
             left: 50%;
             transform: translateX(-50%);
             width: 90%;
@@ -80,12 +100,17 @@
             font-size: 16px;
             border-radius: 25px;
         }
+
     </style>
 </head>
 <body>
 
+   
+
+    <!-- Chat Box for interaction -->
     <div id="chatbox"></div>
 
+    <!-- Input Field at Bottom -->
     <div id="input-container">
         <input type="text" id="user-input" placeholder="Type a message..." onkeypress="handleKeyPress(event)">
     </div>
@@ -94,20 +119,21 @@
         window.onload = async function() {
             let chatbox = document.getElementById("chatbox");
 
+            // Greet User Initially
             try {
                 let response = await fetch("https://chatgpt-backend-3o3a.onrender.com/message", {  
                     method: "POST",
                     headers: { "Content-Type": "application/json" },
-                    body: JSON.stringify({ message: "greet" })
+                    body: JSON.stringify({ message: "greet" })  // Send "greet" to trigger a welcome message
                 });
 
                 let data = await response.json();
                 let botReply = data.reply;
 
-                chatbox.innerHTML += `<p><strong>Mary:</strong> ${botReply}</p>`;
-                chatbox.scrollTop = chatbox.scrollHeight;
+                chatbox.innerHTML += <p><strong>Mary:</strong> ${botReply}</p>;
+                chatbox.scrollTop = chatbox.scrollHeight; // Auto-scroll
             } catch (error) {
-                chatbox.innerHTML += `<p style="color:red;"><strong>Mary:</strong> Error contacting server. Please try again.</p>`;
+                chatbox.innerHTML += <p style="color:red;"><strong>Mary:</strong> Error contacting server. Please try again.</p>;
                 console.error("Fetch error:", error);
             }
         };
@@ -115,21 +141,21 @@
         async function interactWithAvatar() {
             let chatbox = document.getElementById("chatbox");
 
+            // Send message to backend when avatar is clicked
             try {
                 let response = await fetch("https://chatgpt-backend-3o3a.onrender.com/message", {  
                     method: "POST",
                     headers: { "Content-Type": "application/json" },
-                    body: JSON.stringify({ message: 'list please' })
+                    body: JSON.stringify({ message: 'list please' })  // Request vehicle list
                 });
 
                 let data = await response.json();
                 let botReply = data.reply;
 
-                let vehicleList = botReply.split("\n").map((vehicle, index) => `<li>${index + 1}. ${vehicle}</li>`).join("");
-                chatbox.innerHTML += `<p><strong>Mary:</strong></p><ul style='text-align: left; padding-left: 20px;'>${vehicleList}</ul>`;
-                chatbox.scrollTop = chatbox.scrollHeight;
+                chatbox.innerHTML += <p><strong>Mary:</strong> ${botReply}</p>;
+                chatbox.scrollTop = chatbox.scrollHeight; // Auto-scroll
             } catch (error) {
-                chatbox.innerHTML += `<p style="color:red;"><strong>Mary:</strong> Error contacting server. Please try again.</p>`;
+                chatbox.innerHTML += <p style="color:red;"><strong>Mary:</strong> Error contacting server. Please try again.</p>;
                 console.error("Fetch error:", error);
             }
         }
@@ -141,9 +167,11 @@
             let userMessage = inputField.value.trim();
             if (userMessage === "") return;
 
-            chatbox.innerHTML += `<p><strong>You:</strong> ${userMessage}</p>`;
-            chatbox.scrollTop = chatbox.scrollHeight;
+            // Display user message
+            chatbox.innerHTML += <p><strong>You:</strong> ${userMessage}</p>;
+            chatbox.scrollTop = chatbox.scrollHeight; // Auto-scroll
 
+            // Send message to backend
             try {
                 let response = await fetch("https://chatgpt-backend-3o3a.onrender.com/message", {  
                     method: "POST",
@@ -154,18 +182,14 @@
                 let data = await response.json();
                 let botReply = data.reply;
 
-                if (userMessage.toLowerCase().includes("list")) {
-                    let vehicleList = botReply.split("\n").map((vehicle, index) => `<li>${index + 1}. ${vehicle}</li>`).join("");
-                    chatbox.innerHTML += `<p><strong>Mary:</strong></p><ul style='text-align: left; padding-left: 20px;'>${vehicleList}</ul>`;
-                } else {
-                    chatbox.innerHTML += `<p><strong>Mary:</strong> ${botReply}</p>`;
-                }
-                chatbox.scrollTop = chatbox.scrollHeight;
+                chatbox.innerHTML += <p><strong>Mary:</strong> ${botReply}</p>;
+                chatbox.scrollTop = chatbox.scrollHeight; // Auto-scroll
             } catch (error) {
-                chatbox.innerHTML += `<p style="color:red;"><strong>Mary:</strong> Error contacting server. Please try again.</p>`;
+                chatbox.innerHTML += <p style="color:red;"><strong>Mary:</strong> Error contacting server. Please try again.</p>;
                 console.error("Fetch error:", error);
             }
 
+            // Clear input field
             inputField.value = "";
         }
 
@@ -175,6 +199,7 @@
             }
         }
     </script>
+
 </body>
 </html>
 
