--- a/index.html
+++ b/index.html
@@ -28,43 +28,10 @@
             cursor: pointer;
         }
 
-        /* Robot Avatar Styling */
-        #robot-avatar {
-            width: 100%;
-            height: 100%;
-            background-color: rgba(255, 255, 255, 0.2);
-            border-radius: 10px;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            backdrop-filter: blur(10px);
-        }
-
-      
-
-        /* Chest Area (for vehicle name/branding) */
-        #chest {
-            position: absolute;
-            top: 20px;
-            text-align: center;
-        }
-
-        #logo {
-            width: 60px;
-            margin-bottom: 10px;
-        }
-
-        #name {
-            font-size: 16px;
-            color: white;
-            font-weight: bold;
-        }
-
         /* Chat Box for Vehicle Interaction */
         #chatbox {
             position: fixed;
-            bottom: 60px; /* Leaves space for the input field */
+            bottom: 60px;
             left: 50%;
             transform: translateX(-50%);
             width: 90%;
@@ -100,13 +67,9 @@
             font-size: 16px;
             border-radius: 25px;
         }
-
     </style>
 </head>
 <body>
-
-   
-
     <!-- Chat Box for interaction -->
     <div id="chatbox"></div>
 
@@ -119,59 +82,31 @@
         window.onload = async function() {
             let chatbox = document.getElementById("chatbox");
 
-            // Greet User Initially
             try {
                 let response = await fetch("https://chatgpt-backend-3o3a.onrender.com/message", {  
                     method: "POST",
                     headers: { "Content-Type": "application/json" },
-                    body: JSON.stringify({ message: "greet" })  // Send "greet" to trigger a welcome message
+                    body: JSON.stringify({ message: "greet" })
                 });
 
                 let data = await response.json();
-                let botReply = data.reply;
-
-                chatbox.innerHTML += <p><strong>Mary:</strong> ${botReply}</p>;
-                chatbox.scrollTop = chatbox.scrollHeight; // Auto-scroll
+                chatbox.innerHTML += `<p><strong>Mary:</strong> ${data.reply}</p>`;
+                chatbox.scrollTop = chatbox.scrollHeight;
             } catch (error) {
-                chatbox.innerHTML += <p style="color:red;"><strong>Mary:</strong> Error contacting server. Please try again.</p>;
+                chatbox.innerHTML += `<p style="color:red;"><strong>Mary:</strong> Error contacting server. Please try again.</p>`;
                 console.error("Fetch error:", error);
             }
         };
 
-        async function interactWithAvatar() {
-            let chatbox = document.getElementById("chatbox");
-
-            // Send message to backend when avatar is clicked
-            try {
-                let response = await fetch("https://chatgpt-backend-3o3a.onrender.com/message", {  
-                    method: "POST",
-                    headers: { "Content-Type": "application/json" },
-                    body: JSON.stringify({ message: 'list please' })  // Request vehicle list
-                });
-
-                let data = await response.json();
-                let botReply = data.reply;
-
-                chatbox.innerHTML += <p><strong>Mary:</strong> ${botReply}</p>;
-                chatbox.scrollTop = chatbox.scrollHeight; // Auto-scroll
-            } catch (error) {
-                chatbox.innerHTML += <p style="color:red;"><strong>Mary:</strong> Error contacting server. Please try again.</p>;
-                console.error("Fetch error:", error);
-            }
-        }
-
         async function sendMessage() {
             let inputField = document.getElementById("user-input");
             let chatbox = document.getElementById("chatbox");
-
             let userMessage = inputField.value.trim();
             if (userMessage === "") return;
 
-            // Display user message
-            chatbox.innerHTML += <p><strong>You:</strong> ${userMessage}</p>;
-            chatbox.scrollTop = chatbox.scrollHeight; // Auto-scroll
+            chatbox.innerHTML += `<p><strong>You:</strong> ${userMessage}</p>`;
+            chatbox.scrollTop = chatbox.scrollHeight;
 
-            // Send message to backend
             try {
                 let response = await fetch("https://chatgpt-backend-3o3a.onrender.com/message", {  
                     method: "POST",
@@ -180,16 +115,13 @@
                 });
 
                 let data = await response.json();
-                let botReply = data.reply;
-
-                chatbox.innerHTML += <p><strong>Mary:</strong> ${botReply}</p>;
-                chatbox.scrollTop = chatbox.scrollHeight; // Auto-scroll
+                chatbox.innerHTML += `<p><strong>Mary:</strong> ${data.reply}</p>`;
+                chatbox.scrollTop = chatbox.scrollHeight;
             } catch (error) {
-                chatbox.innerHTML += <p style="color:red;"><strong>Mary:</strong> Error contacting server. Please try again.</p>;
+                chatbox.innerHTML += `<p style="color:red;"><strong>Mary:</strong> Error contacting server. Please try again.</p>`;
                 console.error("Fetch error:", error);
             }
 
-            // Clear input field
             inputField.value = "";
         }
 
@@ -199,7 +131,6 @@
             }
         }
     </script>
-
 </body>
 </html>
 
