--- a/index.html
+++ b/index.html
@@ -65,62 +65,66 @@
 
     <script>
         window.onload = async function() {
-            let chatbox = document.getElementById("chatbox");
+    let chatbox = document.getElementById("chatbox");
 
-            try {
-                let response = await fetch("https://chatgpt-backend-3o3a.onrender.com/message", {  
-                    method: "POST",
-                    headers: { "Content-Type": "application/json" },
-                    body: JSON.stringify({ message: "greet" })
-                });
+    // Greet User Initially
+    try {
+        let response = await fetch("https://chatgpt-backend-3o3a.onrender.com/message", {  
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify({ message: "greet" })  // Send "greet" to trigger a welcome message
+        });
 
-                let data = await response.json();
-                chatbox.innerHTML += `<p><strong>Mary:</strong> ${data.reply}</p>`;
-                chatbox.scrollTop = chatbox.scrollHeight;
-            } catch (error) {
-                chatbox.innerHTML += `<p style="color:red;"><strong>Mary:</strong> Error contacting server. Please try again.</p>`;
-                console.error("Fetch error:", error);
-            }
-        };
+        let data = await response.json();
+        let botReply = data.reply;
 
-        async function sendMessage() {
-            let inputField = document.getElementById("user-input");
-            let chatbox = document.getElementById("chatbox");
+        chatbox.innerHTML += `<p><strong>Mary:</strong> ${botReply}</p>`; // ✅ Fixed interpolation
+        chatbox.scrollTop = chatbox.scrollHeight; // Auto-scroll
+    } catch (error) {
+        chatbox.innerHTML += `<p style="color:red;"><strong>Mary:</strong> Error contacting server. Please try again.</p>`;
+        console.error("Fetch error:", error);
+    }
+};
 
-            let userMessage = inputField.value.trim();
-            if (userMessage === "") return;
+async function sendMessage() {
+    let inputField = document.getElementById("user-input");
+    let chatbox = document.getElementById("chatbox");
 
-            chatbox.innerHTML += `<p><strong>You:</strong> ${userMessage}</p>`;
-            chatbox.scrollTop = chatbox.scrollHeight;
+    let userMessage = inputField.value.trim();
+    if (userMessage === "") return;
 
-            try {
-                let response = await fetch("https://chatgpt-backend-3o3a.onrender.com/message", {  
-                    method: "POST",
-                    headers: { "Content-Type": "application/json" },
-                    body: JSON.stringify({ message: userMessage })
-                });
+    // Display user message
+    chatbox.innerHTML += `<p><strong>You:</strong> ${userMessage}</p>`; // ✅ Fixed interpolation
+    chatbox.scrollTop = chatbox.scrollHeight; // Auto-scroll
 
-                let data = await response.json();
-                if (userMessage.toLowerCase() === "list please") {
-                    let vehicles = data.reply.split("\n").map(vehicle => `<li>${vehicle}</li>`).join(" ");
-                    chatbox.innerHTML += `<strong>Mary:</strong><ul>${vehicles}</ul>`;
-                } else {
-                    chatbox.innerHTML += `<p><strong>Mary:</strong> ${data.reply}</p>`;
-                }
-                chatbox.scrollTop = chatbox.scrollHeight;
-            } catch (error) {
-                chatbox.innerHTML += `<p style="color:red;"><strong>Mary:</strong> Error contacting server. Please try again.</p>`;
-                console.error("Fetch error:", error);
-            }
+    // Send message to backend
+    try {
+        let response = await fetch("https://chatgpt-backend-3o3a.onrender.com/message", {  
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify({ message: userMessage })
+        });
 
-            inputField.value = "";
-        }
+        let data = await response.json();
+        let botReply = data.reply;
 
-        function handleKeyPress(event) {
-            if (event.key === "Enter") {
-                sendMessage();
-            }
-        }
+        chatbox.innerHTML += `<p><strong>Mary:</strong> ${botReply}</p>`; // ✅ Fixed interpolation
+        chatbox.scrollTop = chatbox.scrollHeight; // Auto-scroll
+    } catch (error) {
+        chatbox.innerHTML += `<p style="color:red;"><strong>Mary:</strong> Error contacting server. Please try again.</p>`;
+        console.error("Fetch error:", error);
+    }
+
+    // Clear input field
+    inputField.value = "";
+}
+
+function handleKeyPress(event) {
+    if (event.key === "Enter") {
+        sendMessage();
+    }
+}
+
     </script>
 
 </body>
