--- a/index.html
+++ b/index.html
@@ -5,153 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Human Motors Welkom</title>
     <style>
-        body { 
-            font-family: Arial, sans-serif; 
-            text-align: center; 
-            margin: 0; 
-            padding: 0; 
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin: 0;
+            padding: 0;
             background: url("assets/ford-logo.png") no-repeat center center fixed;
             background-size: cover;
         }
         
-        /* Full Screen Layout */
-        #chatbox {
-            position: fixed;
-            bottom: 60px;
-            left: 50%;
-            transform: translateX(-50%);
-            width: 90%;
-            height: 50vh;
-            padding: 10px;
-            background: rgba(0, 0, 0, 0.7);
-            color: white;
-            border-radius: 10px;
-            text-align: left;
-            overflow-y: auto;
-            display: block;
-        }
-
-        /* Input Field at Bottom */
-        #input-container {
-            position: fixed;
-            bottom: 10px;
-            left: 50%;
-            transform: translateX(-50%);
-            width: 90%;
+        /* Button Container */
+        .button-container {
             display: flex;
-            background: white;
-            border-radius: 25px;
-            padding: 10px;
+            justify-content: center;
             align-items: center;
+            flex-wrap: wrap;
+            height: 100vh;
         }
-
-        #user-input {
-            flex: 1;
+        
+        .image-button {
+            width: 150px;
+            height: 150px;
+            margin: 10px;
             border: none;
-            padding: 10px;
-            outline: none;
-            font-size: 16px;
-            border-radius: 25px;
-        }
-
-        /* List of Cars */
-        #car-list {
-            list-style-type: none;
-            padding: 0;
-            margin: 0;
-            text-align: left;
-        }
-
-        #car-list li {
-            background-color: #333;
-            padding: 8px;
-            margin: 5px 0;
-            border-radius: 5px;
-            font-size: 16px;
+            border-radius: 10px;
+            background-size: cover;
+            background-position: center;
+            cursor: pointer;
         }
     </style>
 </head>
 <body>
-
-    <div id="chatbox">
-        <!-- The chatbox will be dynamically updated with car lists -->
+    <div class="button-container">
+        <button class="image-button" style="background-image: url('assets/1.png');"></button>
+        <button class="image-button" style="background-image: url('assets/2.png');"></button>
+        <button class="image-button" style="background-image: url('assets/3.png');"></button>
+        <button class="image-button" style="background-image: url('assets/4.png');"></button>
+        <button class="image-button" style="background-image: url('assets/5.png');"></button>
     </div>
-
-    <div id="input-container">
-        <input type="text" id="user-input" placeholder="Type a message..." onkeypress="handleKeyPress(event)">
-    </div>
-
-    <script>
-        window.onload = async function() {
-            let chatbox = document.getElementById("chatbox");
-
-            // Greet User Initially
-            try {
-                let response = await fetch("http://localhost:5000/message", {  // Change to your backend URL
-                    method: "POST",
-                    headers: { "Content-Type": "application/json" },
-                    body: JSON.stringify({ message: "greet" })  // Send "greet" to trigger a welcome message
-                });
-
-                let data = await response.json();
-                let botReply = data.reply;
-                chatbox.innerHTML += `<p><strong>Mary:</strong> ${botReply}</p>`;
-                chatbox.scrollTop = chatbox.scrollHeight; // Auto-scroll
-            } catch (error) {
-                chatbox.innerHTML += `<p style="color:red;"><strong>Mary:</strong> Error contacting server. Please try again.</p>`;
-                console.error("Fetch error:", error);
-            }
-        };
-
-        async function sendMessage() {
-            let inputField = document.getElementById("user-input");
-            let chatbox = document.getElementById("chatbox");
-
-            let userMessage = inputField.value.trim();
-            if (userMessage === "") return;
-
-            // Display user message
-            chatbox.innerHTML += `<p><strong>You:</strong> ${userMessage}</p>`;
-            chatbox.scrollTop = chatbox.scrollHeight; // Auto-scroll
-
-            // Send message to backend
-            try {
-                let response = await fetch("http://localhost:5000/message", {  // Change to your backend URL
-                    method: "POST",
-                    headers: { "Content-Type": "application/json" },
-                    body: JSON.stringify({ message: userMessage })
-                });
-
-                let data = await response.json();
-                let botReply = data.reply;
-
-                // Display bot's reply
-                chatbox.innerHTML += `<p><strong>Mary:</strong> ${botReply}</p>`;
-                chatbox.scrollTop = chatbox.scrollHeight; // Auto-scroll
-
-                // If the bot reply contains vehicle list, add it to the chatbox
-                if (botReply.includes("We have these available vehicles:")) {
-                    let vehicleList = data.reply.slice(1, -1);  // Get the vehicle list part
-                    vehicleList.forEach(vehicle => {
-                        chatbox.innerHTML += `<p><strong>Mary:</strong> ${vehicle}</p>`;
-                    });
-                    chatbox.scrollTop = chatbox.scrollHeight; // Auto-scroll
-                }
-            } catch (error) {
-                chatbox.innerHTML += `<p style="color:red;"><strong>Mary:</strong> Error contacting server. Please try again.</p>`;
-                console.error("Fetch error:", error);
-            }
-
-            // Clear input field
-            inputField.value = "";
-        }
-
-        function handleKeyPress(event) {
-            if (event.key === "Enter") {
-                sendMessage();
-            }
-        }
-    </script>
-
 </body>
 </html>
