--- a/index.html
+++ b/index.html
@@ -5,43 +5,125 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Human Motors Welkom</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            margin: 0;
-            padding: 0;
-            background: url("assets/ford-logo.png") no-repeat center center fixed;
-            background-size: cover;
+        body { 
+            font-family: Arial, sans-serif; 
+            text-align: center; 
+            margin: 0; 
+            padding: 0; 
+            background-color: #f4f4f4;
         }
-        
+
         /* Button Container */
-        .button-container {
+        #button-container {
             display: flex;
             justify-content: center;
-            align-items: center;
             flex-wrap: wrap;
-            height: 100vh;
+            padding: 20px;
         }
-        
-        .image-button {
-            width: 150px;
-            height: 150px;
+
+        .car-button {
+            width: 180px;
+            height: 100px;
             margin: 10px;
             border: none;
-            border-radius: 10px;
             background-size: cover;
             background-position: center;
             cursor: pointer;
+            border-radius: 10px;
+            transition: transform 0.2s;
+        }
+
+        .car-button:hover {
+            transform: scale(1.1);
+        }
+
+        /* Chatbox */
+        #chatbox {
+            width: 90%;
+            max-width: 400px;
+            height: 300px;
+            margin: 0 auto;
+            background: white;
+            border-radius: 10px;
+            overflow-y: auto;
+            padding: 10px;
+            border: 1px solid #ccc;
+            text-align: left;
+        }
+
+        /* Input Field */
+        #input-container {
+            width: 90%;
+            max-width: 400px;
+            margin: 10px auto;
+            display: flex;
+            background: white;
+            border-radius: 25px;
+            padding: 10px;
+            border: 1px solid #ccc;
+            align-items: center;
+        }
+
+        #user-input {
+            flex: 1;
+            border: none;
+            padding: 10px;
+            outline: none;
+            font-size: 16px;
         }
     </style>
 </head>
 <body>
-    <div class="button-container">
-        <button class="image-button" style="background-image: url('assets/1.png');"></button>
-        <button class="image-button" style="background-image: url('assets/2.png');"></button>
-        <button class="image-button" style="background-image: url('assets/3.png');"></button>
-        <button class="image-button" style="background-image: url('assets/4.png');"></button>
-        <button class="image-button" style="background-image: url('assets/5.png');"></button>
+
+    <!-- Buttons -->
+    <div id="button-container">
+        <button class="car-button" style="background-image: url('assets/1.png');"></button>
+        <button class="car-button" style="background-image: url('assets/2.png');"></button>
+        <button class="car-button" style="background-image: url('assets/3.png');"></button>
+        <button class="car-button" style="background-image: url('assets/4.png');"></button>
+        <button class="car-button" style="background-image: url('assets/5.png');"></button>
     </div>
+
+    <!-- Chatbox -->
+    <div id="chatbox"></div>
+
+    <!-- Input Field -->
+    <div id="input-container">
+        <input type="text" id="user-input" placeholder="Type a message..." onkeypress="handleKeyPress(event)">
+    </div>
+
+    <script>
+        async function sendMessage() {
+            let inputField = document.getElementById("user-input");
+            let chatbox = document.getElementById("chatbox");
+            let userMessage = inputField.value.trim();
+            if (userMessage === "") return;
+
+            chatbox.innerHTML += `<p><strong>You:</strong> ${userMessage}</p>`;
+            chatbox.scrollTop = chatbox.scrollHeight;
+
+            try {
+                let response = await fetch("http://localhost:5000/message", {
+                    method: "POST",
+                    headers: { "Content-Type": "application/json" },
+                    body: JSON.stringify({ message: userMessage })
+                });
+                let data = await response.json();
+                chatbox.innerHTML += `<p><strong>Mary:</strong> ${data.reply.join('<br>')}</p>`;
+                chatbox.scrollTop = chatbox.scrollHeight;
+            } catch (error) {
+                chatbox.innerHTML += `<p style="color:red;"><strong>Mary:</strong> Error contacting server.</p>`;
+            }
+
+            inputField.value = "";
+        }
+
+        function handleKeyPress(event) {
+            if (event.key === "Enter") {
+                sendMessage();
+            }
+        }
+    </script>
+
 </body>
 </html>
