--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
             text-align: center; 
             margin: 0; 
             padding: 0; 
-            background-color: #f4f4f4;
+            background: url("assets/ford-logo.png") no-repeat center center fixed;
+            background-size: cover;
         }
 
         /* Button Container */
